--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   height: 100%;
   margin: 0;
+  background-color: rgba(155, 216, 149, 0.342);
 }
 
 .container {
@@ -14,7 +15,7 @@ body {
 h1 {
   color: white;
   font-family: monospace;
-  font-size: 4em;
+  font-size: 4rem;
 }
 
 .add-todo {
@@ -26,7 +27,7 @@ h1 {
 .todo-input {
   flex: 1 1 0;
   padding: 10px 5px;
-  font-size: 1.3em;
+  font-size: 1.3rem;
   color: darkslategrey;
   border: 1px solid gray;
   border-radius: 5px;
@@ -42,14 +43,15 @@ h1 {
   flex: 0 0 110px;
   border-radius: 5px;
   border: 1px solid gray;
-  font-size: 1.3em;
+  font-size: 1.3rem;
   cursor: pointer;
+  transition: 0.4s;
 }
 
 .add-button:hover {
   background-color: gray;
   color: white;
-  transition: 1s;
+  
 }
 
 .top-todo {
@@ -69,20 +71,17 @@ h1 {
   display: flex;
   align-items: center;
   background-color: #3c414152;
-  margin-bottom: 5px;
+  margin-bottom: 8px;
   font-size: 22px;
   padding: 10px;
   color: white;
   border: 2px solid #08120e1f;
   border-radius: 8px;
-
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-  transition: box-shadow 0.3s ease-in-out;
+  transition: 0.2s;
 }
 
 .todo-added:hover {
-  transition: 1s;
-  box-shadow: 5px 6px 1px rgba(0, 0, 0, 0.3);
+  box-shadow: 4px 5px 2px rgba(0, 0, 0, 0.445);
 }
 
 .todo-added:hover .delete {
