--- a/css/style.css
+++ b/css/style.css
@@ -195,6 +195,11 @@ body {
   margin: 10px 15px;
 }
 
+.historyBtns {
+  display: flex;
+  justify-content: center;
+}
+
 @media screen and (max-width: 460px) {
   .add-button {
     flex: 0 0 70px;
